commit tree d224549cbc86901e0718f94de1fab276432fdef2

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>HTML Images</title>
-  </head>
-  <body>
-    <!-- Your code here -->
-  </body>
-</html>
+<img
+    src="https://wallpaperaccess.com/full/2519384.jpg"
+
+/>
+<img
+    src="https://www.alaskabearsandwolves.com//app/uploads/2020/12/DSC5127-300x300.jpg"
+    alt="Sorry image couldn't load"
+/>
+<img
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="Image not availabe"
+    title="LION IMAGE"
+/>
